unpackaged/main/default/objects/Case/fields/AcceptedJobID__c.field-meta.xml
<CustomField>
    <fullName>AcceptedJobID__c</fullName>
    <label>Accepted Job ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>