unpackaged/main/default/objects/Case/fields/Additional_VQC_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_VQC_Email__c</fullName>
    <label>Additional VQC Email</label>
    <type>Email</type>
</CustomField>