unpackaged/main/default/objects/Case/fields/AdditionalRequirements__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRequirements__c</fullName>
    <inlineHelpText>For performance this field is capped at 255 characters</inlineHelpText>
    <label>Additional Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>