unpackaged/main/default/objects/Case/fields/Age_hrs__c.field-meta.xml
<CustomField>
    <fullName>Age_hrs__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <formula>IF( ISBLANK(ClosedDate) ,
      (NOW() -  CreatedDate)*24,
      (ClosedDate - CreatedDate)*24
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of hours between when the case was created and the current day/time or the case closed date if the case is closed.</inlineHelpText>
    <label>Age (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>