unpackaged/main/default/objects/Case/fields/Allow_EU_Quoting__c.field-meta.xml
<CustomField>
    <fullName>Allow_EU_Quoting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow EU Quoting</label>
    <type>Checkbox</type>
</CustomField>