unpackaged/main/default/objects/Case/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Large Order Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submission Needed</fullName>
                <default>true</default>
                <label>Submission Needed</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Child Case PO Submitted</fullName>
            </value>
            <value>
                <fullName>PO Approved by DFM</fullName>
            </value>
            <value>
                <fullName>PO Automatically Approved</fullName>
            </value>
            <value>
                <fullName>PO Denied by DFM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>