unpackaged/main/default/objects/Case/fields/Asana__c.field-meta.xml
<CustomField>
    <fullName>Asana__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asana</label>
    <type>Checkbox</type>
</CustomField>