unpackaged/main/default/objects/Case/fields/Associated_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Associated_Job_Status__c</fullName>
    <formula>TEXT(Job__r.Stage__c)</formula>
    <label>Associated Job Status</label>
    <type>Text</type>
</CustomField>