unpackaged/main/default/objects/Case/fields/AttachmentStatus__c.field-meta.xml
<CustomField>
    <fullName>AttachmentStatus__c</fullName>
    <label>Attachment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Upload</fullName>
            </value>
            <value>
                <fullName>Upload Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>