unpackaged/main/default/objects/Case/fields/Billing_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Profile_ID__c</fullName>
    <externalId>true</externalId>
    <label>Billing Profile ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>