unpackaged/main/default/objects/Case/fields/Box_Folder__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder__c</fullName>
    <label>Box Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>