unpackaged/main/default/objects/Case/fields/Box_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_URL__c</fullName>
    <label>Box Folder URL</label>
    <type>Url</type>
</CustomField>