unpackaged/main/default/objects/Case/fields/BoxITARConsumerFolderId__c.field-meta.xml
<CustomField>
    <fullName>BoxITARConsumerFolderId__c</fullName>
    <label>Box ITAR Consumer Folder Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>