unpackaged/main/default/objects/Case/fields/BoxNonITARConsumerFolderId__c.field-meta.xml
<CustomField>
    <fullName>BoxNonITARConsumerFolderId__c</fullName>
    <label>Box Non-ITAR Consumer Folder Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>