unpackaged/main/default/objects/Case/fields/bulk_upload_url__c.field-meta.xml
<CustomField>
    <fullName>bulk_upload_url__c</fullName>
    <description>Used for bulk upload; contains `drawingAnalysisId` from drawing-analysis-service as part of the URL</description>
    <label>Bulk Upload URL</label>
    <type>Url</type>
</CustomField>