unpackaged/main/default/objects/Case/fields/Bulk_Upload_Watch_List__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Upload_Watch_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Upload Watch List</label>
    <type>Checkbox</type>
</CustomField>