unpackaged/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resource_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Machine Breakdown</fullName>
            </value>
            <value>
                <fullName>Part Req. Exceed Capabilities</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Partner Unresponsive</fullName>
            </value>
            <value>
                <fullName>Failed Inspection</fullName>
            </value>
            <value>
                <fullName>Partner Refused to Remake</fullName>
            </value>
            <value>
                <fullName>Force Majeure/Weather/Covid</fullName>
            </value>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>