unpackaged/main/default/objects/Case/fields/CancelledJobID__c.field-meta.xml
<CustomField>
    <fullName>CancelledJobID__c</fullName>
    <label>Cancelled Job ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>