unpackaged/main/default/objects/Case/fields/Case_Age_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Bucket__c</fullName>
    <formula>if(CaseAge__c&gt;20,"CONSIDER CLOSING (+20 days)",if(CaseAge__c&gt;5,"SALES REVIEW (6-20 days)",if(CaseAge__c&gt;2,"HOT ZONE (3-5 days)","NEW (0-2 days)")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age Bucket</label>
    <type>Text</type>
</CustomField>