unpackaged/main/default/objects/Case/fields/CaseContactOwnerID__c.field-meta.xml
<CustomField>
    <fullName>CaseContactOwnerID__c</fullName>
    <description>Salesforce ID for Case's Contact Owner.  This is used in Flow.</description>
    <formula>Contact.OwnerId</formula>
    <inlineHelpText>Salesforce ID for Case's Contact Owner.  This is used in Flow.</inlineHelpText>
    <label>CaseContactOwnerID</label>
    <type>Text</type>
</CustomField>