unpackaged/main/default/objects/Case/fields/CaseManager__c.field-meta.xml
<CustomField>
    <fullName>CaseManager__c</fullName>
    <label>Case Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>