unpackaged/main/default/objects/Case/fields/CaseManageronOpsOrder__c.field-meta.xml
<CustomField>
    <fullName>CaseManageronOpsOrder__c</fullName>
    <description>Case Manager on the Ops Order.</description>
    <formula>GNOOrder__r.CaseManager__r.Full_Name__c</formula>
    <label>Case Manager on Ops Order</label>
    <type>Text</type>
</CustomField>