unpackaged/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[AP] - New Vendor/Supplier Set-up</fullName>
            </value>
            <value>
                <fullName>[AP] - Stripe Account Issue</fullName>
            </value>
            <value>
                <fullName>[AP] - Vendor Invoice</fullName>
            </value>
            <value>
                <fullName>[AR] - Unconverted Invoices</fullName>
            </value>
            <value>
                <fullName>[AR] - Unpaid Credit Card Invoices</fullName>
            </value>
            <value>
                <fullName>[AR- Collections] - Portal Customer</fullName>
            </value>
            <value>
                <fullName>[Partner Management] - Account Inquiries</fullName>
            </value>
            <value>
                <fullName>[Partner Management] - Partner Relations</fullName>
            </value>
            <value>
                <fullName>[Partner Management] - Supplier Onboarding</fullName>
            </value>
            <value>
                <fullName>Auto Quote Review</fullName>
            </value>
            <value>
                <fullName>Auto response</fullName>
            </value>
            <value>
                <fullName>Bank Info Request</fullName>
            </value>
            <value>
                <fullName>Billing Account Update</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
                <label>Cancellations</label>
            </value>
            <value>
                <fullName>Capability Questions</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Certifications</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Commercial Invoice</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Credit Applications</fullName>
            </value>
            <value>
                <fullName>Credit Card Payments</fullName>
            </value>
            <value>
                <fullName>Credit Key</fullName>
            </value>
            <value>
                <fullName>Credit Limit Increase</fullName>
            </value>
            <value>
                <fullName>Customer Account Deletion</fullName>
            </value>
            <value>
                <fullName>CustomerOrderCertifications</fullName>
                <label>Customer::Order::Certifications</label>
            </value>
            <value>
                <fullName>CustomerOrderDocument</fullName>
                <label>Customer::Order::Document</label>
            </value>
            <value>
                <fullName>Customer Order Question/Issue</fullName>
            </value>
            <value>
                <fullName>DFM</fullName>
            </value>
            <value>
                <fullName>Document Request - NDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>