unpackaged/main/default/objects/Case/fields/ChildCaseResponseBy__c.field-meta.xml
<CustomField>
    <fullName>ChildCaseResponseBy__c</fullName>
    <label>ChildCaseResponseBy</label>
    <type>DateTime</type>
</CustomField>