unpackaged/main/default/objects/Case/fields/ChildCaseResponseByRemain__c.field-meta.xml
<CustomField>
    <fullName>ChildCaseResponseByRemain__c</fullName>
    <description>Return a Number</description>
    <formula>ChildCaseResponseBy__c - now()</formula>
    <label>ChildCaseResponseByRemain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>