unpackaged/main/default/objects/Case/fields/CM_SLA_24_Hour__c.field-meta.xml
<CustomField>
    <fullName>CM_SLA_24_Hour__c</fullName>
    <formula>IF(

AND(
OR(ISPICKVAL(Priority, "High"),ISPICKVAL(Priority, "Urgent")),
OR(
CMSLAResponseTimeReq_hrs__c&lt;Bus_Hrs_Between_Emails__c,
CMSLAResponseTimeReq_hrs__c &lt; ((Recent_Response_Time__c - Recent_Inbound_Message__c)*24),
(((Recent_Response_Time__c - Recent_Inbound_Message__c)*24)*-1)&gt;CMSLAResponseTimeReq_hrs__c)


),
True
,False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM SLA 24 Hour</label>
    <type>Checkbox</type>
</CustomField>