unpackaged/main/default/objects/Case/fields/CM_SLA_2_Hour__c.field-meta.xml
<CustomField>
    <fullName>CM_SLA_2_Hour__c</fullName>
    <formula>IF(

AND(
NOT(ISBLANK(First_Response_Time__c)),NOT(ISBLANK(Recent_Response_Time__c)),NOT(ISBLANK(Recent_Inbound_Message__c)),CMSLAResponseTimeReq_hrs__c&lt;Bus_Hrs_Between_Emails__c)


,
True
,False
)</formula>
    <label>CM SLA 2 Hour</label>
    <type>Checkbox</type>
</CustomField>