unpackaged/main/default/objects/Case/fields/CM_SLA_TEST2__c.field-meta.xml
<CustomField>
    <fullName>CM_SLA_TEST2__c</fullName>
    <formula>IF(
OR(

AND(
ISBLANK(First_Response_Time__c),Age_hrs__c &gt;= CMSLAResponseTimeReq_hrs__c),

AND(
OR(ISPICKVAL(Priority, "High"),ISPICKVAL(Priority, "Urgent")),
OR(
CMSLAResponseTimeReq_hrs__c &lt; ((Recent_Response_Time__c - Recent_Inbound_Message__c)*24),
(((Recent_Response_Time__c - Recent_Inbound_Message__c)*24)*-1)&gt;CMSLAResponseTimeReq_hrs__c)),


CM_SLA_2_Hour__c = TRUE
























),
True
,False
)</formula>
    <label>CM SLA TEST2</label>
    <type>Checkbox</type>
</CustomField>