unpackaged/main/default/objects/Case/fields/CM_SLA_TEST__c.field-meta.xml
<CustomField>
    <fullName>CM_SLA_TEST__c</fullName>
    <formula>IF(
OR(

AND(
OR(
NOT(ISPICKVAL(Priority, "High")),NOT(ISPICKVAL(Priority,"Urgent"))),
ISBLANK(First_Response_Time__c)
,Age_hrs__c &gt;= CMSLAResponseTimeReq_hrs__c),

AND(
OR(
NOT(ISPICKVAL(Priority, "High")),NOT(ISPICKVAL(Priority,"Urgent"))),
NOT(ISBLANK(First_Response_Time__c)), CMSLAResponseTimeReq_hrs__c &lt; Time_to_First_Response_hrs__c ),

AND(
OR(ISPICKVAL(Priority, "High"),ISPICKVAL(Priority, "Urgent")),
CMSLAResponseTimeReq_hrs__c &lt; Bus_Hrs_Between_Emails__c)









),
True
,False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM SLA TEST1</label>
    <type>Checkbox</type>
</CustomField>