unpackaged/main/default/objects/Case/fields/CM_SLAResponseRequirement_hrs__c.field-meta.xml
<CustomField>
    <fullName>CM_SLAResponseRequirement_hrs__c</fullName>
    <defaultValue>24</defaultValue>
    <label>CM SLA Response Time Requirement (hrs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>