unpackaged/main/default/objects/Case/fields/CM_SLAResponseTimeRemaining_hrs__c.field-meta.xml
<CustomField>
    <fullName>CM_SLAResponseTimeRemaining_hrs__c</fullName>
    <formula>IF(
ISBLANK(First_Response_Time__c),
CMSLAResponseTimeReq_hrs__c - Age_hrs__c,
CMSLAResponseTimeReq_hrs__c - ((NOW()- Recent_Inbound_Message__c)*24)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM SLA Response Time Remaining (hrs)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>