unpackaged/main/default/objects/Case/fields/CMDFMIssueIndicator__c.field-meta.xml
<CustomField>
    <fullName>CMDFMIssueIndicator__c</fullName>
    <formula>IF(AND(( Next_SLA_End__c - now() ) * 24 * 60&gt;0,( Next_SLA_End__c - now() ) * 24 * 60&lt;20),'👀',
IF(OR(
AND(ISPICKVAL(Status,'Pending'),
FLOOR( MOD( (now() -  LastModifiedDate) * 24, 24 ) ) &gt;16 )
),'🟡',IF(OR(
AND(OR(ISPICKVAL(Status,'New'),ISPICKVAL(Status,'Response Received')),SLA_Breached__c)
),'⏰',IF(ISPICKVAL(Priority,'VIP'),'🥇',''))))</formula>
    <inlineHelpText>Cases stay in Pending status for more than 16 Hours.</inlineHelpText>
    <label>Case Age Issue Indicator</label>
    <type>Text</type>
</CustomField>