unpackaged/main/default/objects/Case/fields/CMGT_OrderSubject__c.field-meta.xml
<CustomField>
    <fullName>CMGT_OrderSubject__c</fullName>
    <description>This is for Compact Layout DFM/CMGT</description>
    <formula>IF( NOT(ISPICKVAL(Type,"Large Order Review")),GNOOrder__r.Name   + "-" + Subject,Subject)</formula>
    <inlineHelpText>Formula Field</inlineHelpText>
    <label>CMGT_OrderSubject</label>
    <type>Text</type>
</CustomField>