unpackaged/main/default/objects/Case/fields/CMSLAResponseTimeReq_hrs__c.field-meta.xml
<CustomField>
    <fullName>CMSLAResponseTimeReq_hrs__c</fullName>
    <formula>IF(
IsPartnerSupplier__c = TRUE,
CASE(Priority,
"Urgent",2,
"High",2,
"Low",3,
"Medium",3,
"Normal",3,3),
CASE(Priority,
"Urgent",2,
"High",2,
"Low",6,
"Medium",6,
"Normal",6,6))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM SLA Response Time Req. (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>