unpackaged/main/default/objects/Case/fields/Collect_TotalOverdueBalance__c.field-meta.xml
<CustomField>
    <fullName>Collect_TotalOverdueBalance__c</fullName>
    <formula>X0_30__c + X31_60_Amount__c + X61_90_Amount__c + X91_120_Amount__c + X121_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overdue Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>