unpackaged/main/default/objects/Case/fields/Communications__c.field-meta.xml
<CustomField>
    <fullName>Communications__c</fullName>
    <label>Communications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>