unpackaged/main/default/objects/Case/fields/Contact_Match_Route_to_Sales_Owner_Flag__c.field-meta.xml
<CustomField>
    <fullName>Contact_Match_Route_to_Sales_Owner_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is checked when the method caseContactAssignment has match. If a case assigned to the Sales Que has an existing contact based on the web email then it assign the case to that Contacts Owner. Marking the flag as true will occur for audit purposes.</description>
    <label>Contact Match Route to Sales Owner Flag</label>
    <type>Checkbox</type>
</CustomField>