unpackaged/main/default/objects/Case/fields/Contact_MK_Customer_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>Contact_MK_Customer_Fit_Segment__c</fullName>
    <formula>Contact.MK_Customer_Fit_Segment__c</formula>
    <label>Contact MK Customer Fit Segment</label>
    <type>Text</type>
</CustomField>