unpackaged/main/default/objects/Case/fields/CPC_HourCaseCreated__c.field-meta.xml
<CustomField>
    <fullName>CPC_HourCaseCreated__c</fullName>
    <description>Return Value is in GMT, Convert to User's Local Timezone by Calculation. e.g., EST minus 5.</description>
    <formula>HOUR(TIMEVALUE((CreatedDate)))</formula>
    <inlineHelpText>In UTC format.  e.g.  8:01 PM EST = 20:01 PM EST = 20:01 + 5 hours = 25:01 = 1:01 (next day) thus 1</inlineHelpText>
    <label>Hour Case Created (GMT/UTC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>