unpackaged/main/default/objects/Case/fields/CPC_PO_Flow_Visible__c.field-meta.xml
<CustomField>
    <fullName>CPC_PO_Flow_Visible__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Category__c,"PO"),
OR( ISBLANK(PO_Amount__c),ISBLANK( Opportunity__c), (ISPICKVAL(Stalled_PO__c,"")))),


True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPC PO Flow Visible</label>
    <type>Checkbox</type>
</CustomField>