unpackaged/main/default/objects/Case/fields/CPC_POFlowVisible__c.field-meta.xml
<CustomField>
    <fullName>CPC_POFlowVisible__c</fullName>
    <formula>IF(
AND(
 ISPICKVAL(Category__c,"PO"),
OR( ISBLANK(PO_Amount__c),  (ISPICKVAL(Stalled_PO__c,"")))),


True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPC PO Flow Visible</label>
    <type>Checkbox</type>
</CustomField>