unpackaged/main/default/objects/Case/fields/CPCBusinessHourFlag__c.field-meta.xml
<CustomField>
    <fullName>CPCBusinessHourFlag__c</fullName>
    <formula>IF(OR(AND(AND(WEEKDAY(DATEVALUE(CreatedDate))!=1,WEEKDAY(DATEVALUE(CreatedDate))!=7),OR((HOUR(TIMEVALUE((CreatedDate-$CustomMetadata.Admin_Ref_Variable__mdt.ESTEDTOffset.Number_Ref_Value__c))))&lt;8,(HOUR(TIMEVALUE((CreatedDate-$CustomMetadata.Admin_Ref_Variable__mdt.ESTEDTOffset.Number_Ref_Value__c))))&gt;=22)),AND(OR(WEEKDAY(DATEVALUE(CreatedDate))=1,WEEKDAY(DATEVALUE(CreatedDate))=7),OR((HOUR(TIMEVALUE((CreatedDate-$CustomMetadata.Admin_Ref_Variable__mdt.ESTEDTOffset.Number_Ref_Value__c))))&lt;9,(HOUR(TIMEVALUE((CreatedDate-$CustomMetadata.Admin_Ref_Variable__mdt.ESTEDTOffset.Number_Ref_Value__c))))&gt;=17))),false,true)</formula>
    <label>CPCBusinessHourFlag</label>
    <type>Checkbox</type>
</CustomField>