unpackaged/main/default/objects/Case/fields/cpcPOCheckTest__c.field-meta.xml
<CustomField>
    <fullName>cpcPOCheckTest__c</fullName>
    <formula>AND(CONTAINS(Subject, 'PO '),NOT(CONTAINS(Subject, 'Past Due')))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cpcPOCheckTest</label>
    <type>Checkbox</type>
</CustomField>