unpackaged/main/default/objects/Case/fields/CPCRMAPOC__c.field-meta.xml
<CustomField>
    <fullName>CPCRMAPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup user to be CPC RMA Point of Contact</description>
    <inlineHelpText>CPC Team Member who triages RMA Cases.</inlineHelpText>
    <label>CPC RMA POC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>CPC</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Pick a user with Service role (CPC)</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RMACases</relationshipName>
    <type>Lookup</type>
</CustomField>