unpackaged/main/default/objects/Case/fields/CreatedHour__c.field-meta.xml
<CustomField>
    <fullName>CreatedHour__c</fullName>
    <formula>CASE(HOUR(TIMEVALUE( CreatedDate )),0,19,1,20,2,21,3,22,4,23,5,0,6,1,7,2,8,3,9,4,10,5,11,6,12,7,13,8,14,9,15,10,16,11,17,12,18,13,19,14,20,15,21,16,22,17,23,18,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Hour (EST)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>