unpackaged/main/default/objects/Case/fields/CustomerNotes__c.field-meta.xml
<CustomField>
    <fullName>CustomerNotes__c</fullName>
    <label>Customer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>