unpackaged/main/default/objects/Case/fields/CustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>CustomerPrice__c</fullName>
    <label>Customer Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>