unpackaged/main/default/objects/Case/fields/dateTimeSetToAwaitingCustomer__c.field-meta.xml
<CustomField>
    <fullName>dateTimeSetToAwaitingCustomer__c</fullName>
    <description>This is for PSE Reach Out to Customer.</description>
    <label>dateTimeSetToAwaitingCustomer</label>
    <type>DateTime</type>
</CustomField>