unpackaged/main/default/objects/Case/fields/DaysoftheWeekCaseCreation__c.field-meta.xml
<CustomField>
    <fullName>DaysoftheWeekCaseCreation__c</fullName>
    <description>Returns the day of the week for the given date, using 1 for Sunday, 2 for Monday, through 7 for Saturday.</description>
    <formula>WEEKDAY(DATEVALUE(CreatedDate) )</formula>
    <inlineHelpText>Returns the day of the week for the given date, using 1 for Sunday, 2 for Monday, through 7 for Saturday.</inlineHelpText>
    <label>Days of the Week Case Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>