unpackaged/main/default/objects/Case/fields/Deal_Desk_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Score__c</fullName>
    <label>Deal Desk Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>