unpackaged/main/default/objects/Case/fields/DirectGetSiteLinkforMQ__c.field-meta.xml
<CustomField>
    <fullName>DirectGetSiteLinkforMQ__c</fullName>
    <description>Direct Get URL used by Email Template.</description>
    <formula>HYPERLINK("https://get.xometry.com/quote/"+ QuoteIDorOppIdInEmail__c,QuoteIDorOppIdInEmail__c)</formula>
    <label>Direct Get Site Link for MQ</label>
    <type>Text</type>
</CustomField>