unpackaged/main/default/objects/Case/fields/DoNotClear__c.field-meta.xml
<CustomField>
    <fullName>DoNotClear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Clear</label>
    <type>Checkbox</type>
</CustomField>