unpackaged/main/default/objects/Case/fields/Drop_Dead_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Dead_Delivery_Date__c</fullName>
    <label>Drop Dead Ship Date</label>
    <type>Date</type>
</CustomField>